# buildbot-gitea

./: pyproject.toml
buildbot_gitea/: webhook.py
